2004-04-28  Aaron Faupell <afaupell@users.sourceforge.net>

	* png.tcl: fixed output file encoding in removeComments

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* png.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* png.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* png.test: Hooked into the new common test support code.

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* png.test: Fixed [SF Tcllib Bug 1316055]. Uncluttering test
	  output.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-08-25  Andreas Kupries <andreask@activestate.com>

	* png.tcl (::png::validate): Added forced truncation to 32bit when
	* png.tcl (::png::imageInfo): reformatting a read negative crc to
	  unsigned. Otherwise this is becomes a 64bit unsigned, causing
	  bogus crc checksum failures. This fixes [Tcllib SF Bug 1042420].

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-22  Aaron Faupell <afaupell@users.sourceforge.net>

	* png.test: updated timestamp test to use gmt

2004-08-25  Aaron Faupell <afaupell@users.sourceforge.net>

	* png.tcl bug fix in getTimestamp, made times be interpreted as gmt.

2004-08-09  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* png.man: Spelling police.
	* png.test:

2004-05-22  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* png.tcl: Fixed a problem with the reading of crc data from png
	  files. The 'binary scan' may return a negative integer, but the